reintegrate the qsv_xten branch into trunk